chore(recordedClasses): added thumbnail
